app/src/main/java/com/example/truckercore/model/errors/exceptions/infra/InfraErrorCode.kt
package com.example.truckercore.model.errors.exceptions.infra

interface InfraErrorCode